--- a/style.css
+++ b/style.css
@@ -21,17 +21,17 @@ body {
     min-height: 100vh;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .wrapper {
     max-width: 600px;
-    width: 100%;
     margin: 20px auto;
     padding: 20px;
     background: #fff;
     box-shadow: 0px 4px 8px 0px var(--shadow-color);
     border-radius: 8px;
-	position: relative;
+    position: relative;
 }
 
 h3, h4 {
