--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ h4{
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    color: var(--header-color);
+    color: var(--primary-color);
     font-size: 20px;
     font-weight: bold;
 }
@@ -216,7 +216,7 @@ h4{
 h2 {
     margin: 0 auto;
     text-align: center;
-    color: var(--header-color);
+    color: var(--primary-color);
     font-weight: bold;
 }
 
