--- a/style.css
+++ b/style.css
@@ -183,12 +183,11 @@ footer p {
 }
 
 .level-group > div {
-    justify-content: center;
     display: flex;
     flex-direction: column;
-    align-content: center;
     align-items: center;
     flex: 1 1 20%;
+    justify-content: space-between;
 }
 .items h3, h4 {
     cursor: text;
