--- a/style.css
+++ b/style.css
@@ -76,17 +76,30 @@ button:hover {
 }
 
 footer {
+	box-shadow: 0px 0px 3px #ffffff;
     margin-top: auto;
-    background: var(--primary-color);
-    color: var(--secondary-color);
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
-    padding: 10px 0;
-    text-align: center;
+    column-gap: 20px;
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    background: #08425a;
+    align-items: center;
 }
-
+footer svg {
+    height: 25px;
+    fill: #e5dfbc;
+    cursor: pointer;
+}
 footer p {
-    margin: 5px 0;
+    margin: 0;
     font-style: italic;
+    color: #e5dfbc;
+}
+footer div {
+    width: 600px;
 }
 
 /* Tulosten tyyli */
@@ -410,6 +423,72 @@ button.multiplier-btn {
     animation: dash0175 1.5s ease-in-out infinite;
     stroke-linecap: round;
 }
+.donate-header {
+    width: 100%;
+    display: flex;
+}
+
+.donate-header button#openGiftFromHeader {
+    background: #fff;
+    color: #08425a;
+    column-gap: 10px;
+    margin: 0;
+    padding-top: 0;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    align-items: flex-end;
+}
+.donate-header button#openGiftFromHeader:hover span {
+    text-decoration: underline;
+}
+
+.donate-header button#openGiftFromHeader svg {
+    width: 20px;
+    fill: #08425a;
+}
+
+.gift {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    background: #fff;
+    padding: 6px 23px;
+    position: relative;
+}
+
+.gift button.close {
+    background: #fff;
+    gap: 20px;
+    margin-top: 0px;
+    position: absolute;
+    top: -18px;
+    right: -18px;
+}
+
+.gift button.close:hover svg {
+	transform: rotate(90deg);	
+}
+.gift button.close svg {
+    height: 20px;
+    fill: #08425a;
+	transition: 0.2s;
+}
+.gift a:active {
+    color: #08425a;
+}
+
+.gift p span {
+    width: 100%;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: #08425a;
+    padding: 10px 0px;
+}
+
 
 @keyframes rotate73451 {
   100% {
