--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ footer div {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
+	cursor: pointer;
 	justify-content: center;
 }
 
@@ -207,6 +208,9 @@ footer div {
     align-items: center;
     flex: 1 1 20%;
     justify-content: space-between;
+}
+.level-group .opacity {
+    opacity: 0.5;
 }
 .items h3, h4 {
     cursor: text;
@@ -488,9 +492,6 @@ button.multiplier-btn {
     justify-content: center;
     color: #08425a;
     padding: 10px 0px;
-}
-.level-group .opacity {
-    opacity: 0.5;
 }
 
 @keyframes rotate73451 {
