--- a/style.css
+++ b/style.css
@@ -24,6 +24,18 @@ body {
     overflow-x: hidden;
 }
 
+.warlord-toggle label {
+    top: 1px;
+    left: 25px;
+    padding: 0;
+    user-select: none;
+}
+
+.warlord-toggle {
+    position: relative;
+    margin-top: 10px;
+}
+
 .wrapper {
     max-width: 600px;
     margin: 20px auto;
@@ -65,7 +77,7 @@ button, .generate-480 {
     cursor: pointer;
     margin-top: 10px;
     color: var(--secondary-color);
-    width: max-content;
+    width: 100%;
     display: inline-block;
     margin-right: 10px;
     font-size: 12px;
@@ -112,7 +124,8 @@ footer div {
     top: -32px;
     right: -22px;
     cursor: pointer;
-	background: none;
+    background: none;
+    width: max-content;
 }
 #results .items {
     margin-bottom: 10px;
@@ -295,6 +308,7 @@ button.multiplier-btn {
     display: flex;
     flex-direction: row;
     padding-bottom: 8px;
+    column-gap: 8px;
     align-items: center;
     justify-content: space-between;
 }
